Исправлены замечания после первой проверки
Добавлены состояния disabled, исправлены опечатки в названии классов stars-box и product-rating-value, favicon подключен в формате ico

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="page-container">
@@ -184,10 +184,10 @@
               <span class="product-price">От 4000 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-to-favorites" type="button">В Избранное</button>
-              <div class="product-starsbox four-stars">
+              <div class="product-stars-box four-stars">
                 <span class="visually-hidden">Четыре звезды</span>
               </div>
-              <span class="product-rating">Рейтинг: <span class="product-raiting-value">8,5</span></span>
+              <span class="product-rating">Рейтинг: <span class="product-rating-value">8,5</span></span>
             </li>
 
             <li class="product-item">
@@ -201,10 +201,10 @@
               <span class="product-price">От 5000 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-in-favorites" type="button">В Избранном</button>
-              <div class="product-starsbox four-stars">
+              <div class="product-stars-box four-stars">
                 <span class="visually-hidden">Четыре звезды</span>
               </div>
-              <span class="product-rating">Рейтинг: <span class="product-raiting-value">9,2</span></span>
+              <span class="product-rating">Рейтинг: <span class="product-rating-value">9,2</span></span>
             </li>
 
             <li class="product-item">
@@ -218,10 +218,10 @@
               <span class="product-price">От 2500 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-to-favorites" type="button">В Избранное</button>
-              <div class="product-starsbox three-stars">
+              <div class="product-stars-box three-stars">
                 <span class="visually-hidden">Три звезды</span>
               </div>
-              <span class="product-rating">Рейтинг: <span class="product-raiting-value">6,9</span></span>
+              <span class="product-rating">Рейтинг: <span class="product-rating-value">6,9</span></span>
             </li>
 
             <li class="product-item">
@@ -235,10 +235,10 @@
               <span class="product-price">От 1500 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
               <button class="product-to-favorites" type="button">В Избранное</button>
-              <div class="product-starsbox two-stars">
+              <div class="product-stars-box two-stars">
                 <span class="visually-hidden">Две звезды</span>
               </div>
-              <span class="product-rating">Рейтинг: <span class="product-raiting-value">5,0</span></span>
+              <span class="product-rating">Рейтинг: <span class="product-rating-value">5,0</span></span>
             </li>
           </ul>
           <ul class="pagination">
